implemented function type consideration

--- a/src/test/resources/wfInputFiles/singleAtomic.yaml
+++ b/src/test/resources/wfInputFiles/singleAtomic.yaml
@@ -7,7 +7,7 @@ dataIns:
 workflowBody:
   - function:
       name: "atomicFunction"
-      type: "functionType"
+      type: "serverless"
       dataIns:
         - name: "myInput"
           type: "number"
