--- a/build.gradle
+++ b/build.gradle
@@ -55,4 +55,9 @@ jacocoTestReport {
 	reports {
 		xml.enabled true
 	}
+	afterEvaluate {
+		classDirectories.from = files(classDirectories.files.collect {
+			fileTree(dir: it, exclude: '**/modules/**')
+		})
+	}
 }
