--- a/src/test/resources/wfInputFiles/singleAtomic.yaml
+++ b/src/test/resources/wfInputFiles/singleAtomic.yaml
@@ -7,7 +7,7 @@ dataIns:
 workflowBody:
   - function:
       name: "atomicFunction"
-      type: "serverless"
+      type: "addition"
       dataIns:
         - name: "myInput"
           type: "number"
@@ -18,9 +18,6 @@ workflowBody:
       dataOuts: 
         - name: "myOutput"
           type: "string"
-      properties:
-        - name: "resource"
-          value: "my_res_link" 
 dataOuts:
   - name: "output_name"
     type: "string"
