--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,9 @@ repositories {
 dependencies {
 	
 	// dependencies to other parts of the Apollo Core EE
-	implementation 'com.github.Apollo-Core:EE-Core:master-SNAPSHOT'
-	implementation 'com.github.Apollo-Core:EE-Guice:main-SNAPSHOT'
-	implementation 'com.github.Apollo-Core:EE-Model:main-SNAPSHOT'
+	implementation 'com.github.ChristianChiste:EE-Core:master-SNAPSHOT'
+	implementation 'com.github.ChristianChiste:EE-Guice:main-SNAPSHOT'
+	implementation 'com.github.ChristianChiste:EE-Model:main-SNAPSHOT'
 	
 	implementation 'com.github.ApolloCEC:socketUtils:-SNAPSHOT'
 	
