--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ jacoco {
 	}
 // to use GitHub repositories as dependencies
 
-group 'Apollo-Core-EE-IO'
+group 'ChristianChiste-EE-IO'
 version '1.0-SNAPSHOT'
 
 
