--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ repositories {
 dependencies {
 	
 	// dependencies to other parts of the Apollo Core EE
-	implementation 'com.github.ChristianChiste:EE-Core:8f8be7c771ba91e4bc87e3b466d53a5c85db00a1'
+	implementation 'com.github.ChristianChiste:EE-Core:master-SNAPSHOT'
 	implementation 'com.github.ChristianChiste:EE-Guice:main-SNAPSHOT'
 	implementation 'com.github.ChristianChiste:EE-Model:main-SNAPSHOT'
 	
